fix: font size of message under Safari were too small

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,6 +2,7 @@ html, body {
     font-family: 'Mulish', Arial, Helvetica, sans-serif;
     padding: 0;
     margin: 0;
+    font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -10,4 +11,5 @@ h1, h2, h3, h4, h5, h6 {
 
 textarea {
     font-family: 'Mulish', Arial, Helvetica, sans-serif;
+    font-size: 1em;
 }
